# IDBI_hackathon_reconpilot

./: .dockerignore  .vercelignore  Dockerfile  README.md  requirements.txt  vercel.json
api/: index.py
backend/: pyproject.toml
backend/app/: config.py
backend/app/agent/: agent.py
backend/app/api/: main.py  rules_nl.py
backend/app/datagen/: generate.py
backend/app/recon/: matcher.py  tat.py
backend/reconpilot.egg-info/: PKG-INFO  SOURCES.txt
docs/: 00-hackathon-overview.md  01-track-comparison-and-recommendation.md  mindmap-artifact.html  mindmap.md  track-01-digital-wealth-management.md  track-02-prospect-assist-ai.md  track-03-msme-financial-health-score.md  track-04-default-prediction-model.md  track-05-open-innovation.md
docs/research/: india-stack-and-aws.md  regulatory-landscape.md  track-01-research.md  track-02-research.md  track-03-research.md  track-04-research.md  track-05-research.md
frontend/: index.html  vite.config.js
frontend/src/: api.js  index.css
reconpilot/: .gitignore  README.md
reconpilot/backend/app/agent/: tools.py
reconpilot/backend/app/recon/: normalize.py  schemas.py
reconpilot/backend/app/store/: db.py
reconpilot/backend/reconpilot.egg-info/: requires.txt
reconpilot/frontend/: package-lock.json  package.json
reconpilot/frontend/src/: App.jsx
