[project]
name = "reconpilot"
version = "0.1.0"
description = "ReconPilot — agentic UPI 3-way reconciliation & exception-resolution desk (IDBI Innovate 2026, Track 5)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.2",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["app*"]
